[package]
name = "http-endpoint"
version = "0.5.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/http-endpoint"
repository = "https://github.com/d-e-s-o/http-endpoint.git"
readme = "README.md"
description = """
Declarative specification of HTTP endpoints.
"""

[dependencies]
http = {version = "0.2", default-features = false}

[dev-dependencies]
env_logger = {version = "0.8", default-features = false}
hyper = {version = "0.14", default-features = false, features = ["client", "http1", "tcp"]}
hyper-tls = {version = "0.5", default-features = false}
serde = {version = "1.0", default-features = false, features = ["derive"]}
serde_json = {version = "1.0.45", default-features = false, features = ["std"]}
test-env-log = {version = "0.2", default-features = false}
thiserror = {version = "1.0"}
tokio = {version = "1.0", default-features = false, features = ["rt", "macros"]}
url = {version = "2.0", default-features = false}
