[package]
name = "http-endpoint"
version = "0.5.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/http-endpoint"
repository = "https://github.com/d-e-s-o/http-endpoint.git"
readme = "README.md"
description = """
Declarative specification of HTTP endpoints.
"""

[dependencies]
http = {version = "1.1", default-features = false, features = ["std"]}

[dev-dependencies]
http-body-util = {version = "0.1", default-features = false}
hyper = {version = "1.4", default-features = false, features = ["client", "http1"]}
hyper-tls = {version = "0.6", default-features = false}
hyper-util = {version = "0.1.3", default-features = false, features = ["client", "client-legacy", "http1", "tokio"]}
serde = {version = "1.0", default-features = false, features = ["derive"]}
serde_json = {version = "1.0.45", default-features = false, features = ["std"]}
test-log = {version = "0.2.14", features = ["log", "trace"]}
thiserror = {version = "1.0"}
tokio = {version = "1.0", default-features = false, features = ["rt", "macros"]}
url = {version = "2.0", default-features = false}
